Primera fase de pruebas, resultados semi completos, creacion de usuarios correcto